--- a/appMien58/appMien.vcxproj
+++ b/appMien58/appMien.vcxproj
@@ -19,12 +19,16 @@
       <Project>{47bdca6a-d642-4af6-ad14-271038514b54}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="data.hpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{3784AF4E-664C-47E9-B604-5224A0D4F995}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>appMien</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>appMien58</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
