--- a/Mien58/Mien.vcxproj
+++ b/Mien58/Mien.vcxproj
@@ -20,6 +20,7 @@
     <ClInclude Include="Mien58.hpp" />
     <ClInclude Include="MienNet.hpp" />
     <ClInclude Include="dlib_cv.hpp" />
+    <ClInclude Include="_config.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -27,6 +28,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Mien</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>Mien58</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
