--- a/dlib/dlib.vcxproj
+++ b/dlib/dlib.vcxproj
@@ -12,6 +12,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="all\source.cpp" />
+    <ClCompile Include="test_for_odr_violations.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="config.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
